2013-09-03 Vasily M. Stashko

	* core/DB/MySQL.class.php
	core/DB/MySQLim.class.php:
		added (mysqli?_ping) check to isConnected() methods

2013-04-19  Aleksey S. Denisov

	* core/Cache/CachePeer.class.php
      core/Cache/WatermarkedPeer.class.php
      core/DB/DB.class.php:
        fixed deferent uncache keys with watermark while in db transaction

2013-04-08  Artem V. Titarenko

	* main/DAOs/Workers/SmartDaoWorker.class.php: SmartDaoWorker race condition bug fix

2013-03-31  Viatcheslav Y. Tsyrulnik

	* core/Form/Primitives/PrimitiveHttpUrl.class.php
		main/Net/HttpUrl.class.php
		test/core/PrimitiveHttpUrlTest.class.php
		test/main/HttpUrlTest.class.php:
			HttpUrl::isValid skips privileged ports validation by default

2013-03-31  Nikita V. Konstantinov

	* core/Base/Singleton.class.php:
		Singleton 2+ constructor arguments now without eval

2013-01-23  Dmitriy V. Snezhinskiy

	* main/Math/MathUtils.class.php 
		test/main/MathUtilsTest.class.php:
			fix matrix multiplication, add test

2012-12-23  Vasily A. Surikov

	* meta/bin/build.php
		meta/classes/ColoredTextOutput.class.php
		meta/classes/MetaOutput.class.php
		meta/classes/TextOutput.class.php:
			do not forward stderr > stdout

2012-12-23  Vasily A. Surikov

	* core/Form/Primitives/BasePrimitive.class.php
		core/Form/Primitives/PrimitiveAlias.class.php
		core/Form/Primitives/TimeList.class.php:
			getActualValue marked deprecated and not secure,
				added instead it method getValueOrDefault

2012-12-23  Alexey S. Denisov

	* main/Base/AbstractProtoClass.class.php
		main/Base/InnerMetaProperty.class.php:
			InnerMetaProperty (ValueObject) unquoting binary field fix

2012-12-06  Evgeny V. Kokovikhin

	* main/DAOs/GenericDAO.class.php 
		meta/builders/AutoDaoBuilder.class.php 
		meta/builders/BaseBuilder.class.php:
			dbLink became a property

2012-11-25  Alexey S. Denisov

	* core/Form/Primitives/PrimitiveIdentifier.class.php
		core/Form/Primitives/PrimitiveIdentifier.class.php: